--- a/_posts/2025-06-26-RedTeamN1.md
+++ b/_posts/2025-06-26-RedTeamN1.md
@@ -83,3 +83,372 @@ Avaliar a **efetividade das defesas** da organização de forma realista, indo a
 - Testa defesas em cenários realistas  
 - Reduz o impacto de ataques reais
 
+# 🔴 Red Team N1: Conceitos Básicos de Segurança da Informação – Confidencialidade, Integridade e Disponibilidade (CIA)
+
+Antes de planejar e executar ataques simulados, é fundamental entender os princípios básicos que regem a segurança da informação. O modelo CIA (Confidencialidade, Integridade e Disponibilidade) guia tanto defensores quanto ofensores na proteção e exploração de sistemas.
+
+Conheça o terreno para atacar com eficácia.
+
+---
+
+## 🧠 O que é o modelo CIA?
+
+O modelo CIA define três objetivos principais que toda segurança deve buscar:
+
+- **Confidencialidade:** garantir que a informação seja acessível apenas a quem tem permissão  
+- **Integridade:** assegurar que os dados não sejam alterados indevidamente  
+- **Disponibilidade:** manter o acesso à informação e sistemas sempre que necessário  
+
+---
+
+## 🧱 Impacto do modelo CIA no Red Team
+
+### 1. Confidencialidade
+
+- Identificar formas de acessar dados restritos (exfiltração)  
+- Explorar falhas em controles de acesso e autenticação  
+- Bypass de criptografia e engenharia social para obter credenciais  
+
+### 2. Integridade
+
+- Investigar formas de alterar dados para desestabilizar sistemas ou encobrir rastros  
+- Modificação de logs, arquivos e configurações para esconder presença  
+- Ataques de injeção e manipulação de processos  
+
+### 3. Disponibilidade
+
+- Avaliar vulnerabilidades que causem interrupção (DoS/DDoS)  
+- Impactar sistemas críticos para gerar impacto operacional  
+- Planejar ataques que causem degradação do serviço sem detecção imediata  
+
+---
+
+## 🔍 Exemplos práticos
+
+!!!
+- Confidencialidade: phishing para capturar credenciais administrativas  
+- Integridade: alteração de registros para evitar detecção em uma invasão  
+- Disponibilidade: ataque de negação de serviço contra um servidor web  
+!!!
+
+---
+
+## ⚙️ Como usar o modelo CIA para planejar ataques
+
+- Analise quais pilares são mais frágeis no alvo para escolher a estratégia  
+- Explore a cadeia de ataques que comprometam um ou mais pilares  
+- Utilize técnicas avançadas para maximizar o impacto e minimizar a detecção  
+- Prepare-se para adaptar o ataque conforme as defesas identificadas  
+
+---
+
+## ✅ Conclusão
+
+Entender Confidencialidade, Integridade e Disponibilidade é fundamental para que um Red Team N1 planeje ataques eficazes e realistas. Dominar esses conceitos ajuda a identificar pontos fracos e maximizar o sucesso das simulações ofensivas.
+
+---
+
+# 🔴 Red Team N1: Fundamentos de Redes – TCP/IP, DNS e HTTP
+
+Para atuar com eficácia em Red Team, é essencial dominar os fundamentos das redes, pois grande parte das técnicas ofensivas depende do entendimento dos protocolos de comunicação. Conhecer TCP/IP, DNS e HTTP ajuda a mapear alvos, explorar vulnerabilidades e evadir defesas.
+
+Domine a rede para atacar com precisão.
+
+---
+
+## 🧠 Principais protocolos para o Red Team
+
+- **TCP/IP:** base da comunicação na internet, permite troca de pacotes entre dispositivos  
+- **DNS:** serviço de resolução de nomes que traduz domínios em endereços IP  
+- **HTTP:** protocolo usado para comunicação web, alvo frequente de ataques  
+
+---
+
+## 🧱 Conceitos essenciais
+
+### 1. TCP/IP
+
+- Modelo em camadas: Aplicação, Transporte, Internet, Link  
+- TCP: conexão confiável, controle de fluxo e retransmissão  
+- IP: roteamento e endereçamento dos pacotes  
+- Ferramentas: nmap para escaneamento e análise de portas  
+
+### 2. DNS
+
+- Como funciona a resolução de nomes em IPs  
+- Tipos de registros DNS: A, MX, CNAME, TXT  
+- Técnicas de ataque: DNS spoofing, DNS tunneling  
+
+### 3. HTTP
+
+- Funcionamento básico do protocolo (requests e responses)  
+- Métodos comuns: GET, POST, PUT, DELETE  
+- Exploração: ataques de injeção, XSS, manipulação de headers  
+
+---
+
+## 🔍 Exemplos práticos
+
+!!!
+- TCP/IP: usar nmap para mapear portas abertas no alvo  
+- DNS: coletar informações públicas via DNS enumeration  
+- HTTP: testar formulários web para vulnerabilidades de injeção  
+!!!
+
+---
+
+## ⚙️ Como aplicar no Red Team
+
+- Utilize o conhecimento para planejar fases de reconhecimento e exploração  
+- Explore fraquezas na configuração dos protocolos para obter acesso  
+- Use técnicas de evasão baseadas no comportamento dos protocolos  
+- Combine informações obtidas para construir ataques mais eficazes  
+
+---
+
+## ✅ Conclusão
+
+Dominar os fundamentos de TCP/IP, DNS e HTTP é crucial para qualquer Red Team N1 que deseja realizar ataques realistas e eficientes. Esses protocolos são a base das comunicações e seu conhecimento abre portas para inúmeras técnicas ofensivas.
+
+---
+
+# 🔴 Red Team N1: Instalando VMs para Laboratório – Kali Linux (Red Team) e Security Onion/Windows Server (Blue Team)
+
+Montar um laboratório prático é fundamental para o desenvolvimento das habilidades de Red Team. Ter um ambiente controlado com máquinas para ataque (Kali Linux) e defesa (Security Onion ou Windows Server) permite simular cenários reais e testar técnicas sem riscos.
+
+Prepare seu ambiente para praticar com segurança.
+
+---
+
+## 🧠 Por que montar um laboratório com VMs?
+
+- Praticar ataques e defesas em ambiente seguro  
+- Testar ferramentas, técnicas e estratégias com liberdade  
+- Entender o comportamento dos sistemas e respostas a ataques  
+- Desenvolver habilidades de análise e mitigação  
+
+---
+
+## 🧱 Passos para instalação das VMs
+
+### 1. Escolher a plataforma de virtualização
+
+- Recomendo: **VirtualBox** (gratuito) ou **VMware Workstation Player**  
+- Instale no seu computador conforme o sistema operacional  
+
+### 2. Baixar as imagens ISO
+
+- **Kali Linux:** [https://www.kali.org/get-kali/](https://www.kali.org/get-kali/)  
+- **Security Onion:** [https://securityonion.net/](https://securityonion.net/)  
+- **Windows Server:** obtenha via portal da Microsoft ou licenças de avaliação  
+
+### 3. Criar a VM Kali Linux
+
+- Configurar memória (mínimo 2GB, recomendado 4GB+)  
+- Definir disco virtual (mínimo 20GB)  
+- Configurar rede em modo bridge ou NAT para comunicação com outras VMs  
+- Instalar Kali a partir do ISO baixado  
+
+### 4. Criar a VM Security Onion ou Windows Server
+
+- Configurar recursos semelhantes (memória, disco)  
+- Instalar a partir do ISO ou imagem correspondente  
+- Configurar rede para comunicar com Kali e com seu host  
+
+---
+
+## 🔍 Dicas para configuração e uso
+
+!!!
+- Reserve uma rede virtual interna para isolar o laboratório da rede principal  
+- Atualize os sistemas e instale ferramentas adicionais conforme necessidade  
+- Configure snapshots para salvar estados antes de testes importantes  
+- Pratique comandos básicos, ataques simulados e análise de logs entre as VMs  
+!!!
+
+---
+
+## ✅ Conclusão
+
+Ter um laboratório com Kali Linux para Red Team e Security Onion ou Windows Server para Blue Team é essencial para a prática segura e eficaz. Esse ambiente facilita o aprendizado, experimentação e desenvolvimento de habilidades práticas.
+
+---
+
+# 🔴 Red Team N1: Material de Estudo – Curso Introdutório de Segurança e Recursos no YouTube
+
+Para iniciar sua jornada no Red Team, é fundamental construir uma base sólida com conteúdos introdutórios que abordem os conceitos essenciais de segurança da informação. Cursos online e vídeos no YouTube são ótimas formas de absorver o conhecimento de forma acessível e prática.
+
+Comece com o básico para construir seu futuro.
+
+---
+
+## 🧠 Por que começar com cursos introdutórios?
+
+- Explicam conceitos fundamentais e terminologias  
+- Apresentam cenários reais e exemplos práticos  
+- Fornecem estrutura para aprofundar estudos futuros  
+- Facilitam o entendimento de segurança ofensiva e defensiva  
+
+---
+
+## 🧱 Sugestões de materiais iniciais
+
+### 1. Cursos introdutórios
+
+- **“Cybersecurity Basics”** – curso gratuito disponível em plataformas como Coursera, Udemy ou Cybrary  
+- **“Introduction to Cyber Security”** da Cisco Networking Academy  
+- **“Fundamentals of Cybersecurity”** no edX  
+
+### 2. Canais do YouTube
+
+- **NetworkChuck** – explica desde o básico até tópicos avançados de segurança e redes  
+- **The Cyber Mentor** – conteúdo prático voltado para Red Team e pentesting  
+- **HackerSploit** – tutoriais sobre hacking ético, segurança e ferramentas  
+
+---
+
+## 🔍 Dicas para aproveitar o material
+
+!!!
+- Faça anotações e revise os conteúdos periodicamente  
+- Pratique o que aprendeu em laboratórios virtuais e VMs  
+- Combine vídeos com leitura complementar para fixar o conhecimento  
+- Participe de comunidades para tirar dúvidas e trocar experiências  
+!!!
+
+---
+
+## ✅ Conclusão
+
+Utilizar cursos introdutórios e vídeos do YouTube é uma excelente maneira de iniciar sua trajetória no Red Team. O aprendizado constante e a prática farão a diferença para sua evolução profissional.
+
+---
+
+# 🔴 Red Team N1: Estudo Detalhado dos Modelos OSI e TCP/IP
+
+Dominar os modelos OSI e TCP/IP é fundamental para qualquer profissional de Red Team. Compreender as camadas que estruturam as redes ajuda a identificar pontos de ataque, analisar tráfego e explorar vulnerabilidades com maior precisão.
+
+Conhecimento profundo da rede é chave para um ataque eficaz.
+
+---
+
+## 🧠 O que são os modelos OSI e TCP/IP?
+
+- **Modelo OSI:** referência teórica que divide a comunicação em 7 camadas distintas  
+- **Modelo TCP/IP:** modelo prático usado na internet, com 4 camadas principais  
+- Ambos ajudam a entender como os dados transitam e onde atacar ou defender  
+
+---
+
+## 🧱 Detalhes das camadas
+
+### Modelo OSI (7 camadas)
+
+1. **Física:** transmissão de bits brutos (cabos, sinais elétricos)  
+2. **Enlace:** controle de acesso ao meio e detecção de erros (MAC, switches)  
+3. **Rede:** roteamento e endereçamento (IP)  
+4. **Transporte:** controle de fluxo e entrega confiável (TCP, UDP)  
+5. **Sessão:** controle de conexões e sessões  
+6. **Apresentação:** formatação, criptografia e compressão  
+7. **Aplicação:** protocolos finais como HTTP, FTP, DNS  
+
+### Modelo TCP/IP (4 camadas)
+
+1. **Link:** equivalente a física + enlace  
+2. **Internet:** roteamento (IP)  
+3. **Transporte:** TCP/UDP  
+4. **Aplicação:** protocolos e serviços (HTTP, DNS, SMTP)  
+
+---
+
+## 🔍 Como aplicar no Red Team
+
+!!!
+- Identificar em qual camada o alvo pode ser explorado (ex: injeção na aplicação, spoofing na rede)  
+- Analisar tráfego capturado para detectar anomalias  
+- Explorar falhas específicas em protocolos de cada camada  
+- Planejar ataques combinando múltiplas camadas para maior eficácia  
+!!!
+
+---
+
+## ⚙️ Ferramentas úteis para estudo
+
+- Wireshark para análise de pacotes  
+- tcpdump para captura em linha de comando  
+- Ferramentas de mapeamento de rede como nmap  
+- Simuladores de redes e laboratórios virtuais  
+
+---
+
+## ✅ Conclusão
+
+Estudar os modelos OSI e TCP/IP detalhadamente é um passo essencial para se tornar um Red Team eficaz. Com esse conhecimento, você entenderá melhor o funcionamento das redes e poderá identificar e explorar vulnerabilidades com mais precisão.
+
+---
+
+# 🔴 Red Team N1: Entendendo Protocolos TCP, UDP e ICMP
+
+Para um Red Team eficaz, conhecer como funcionam os principais protocolos de rede é essencial. TCP, UDP e ICMP são protocolos fundamentais usados para comunicação entre dispositivos e, também, vetores comuns em técnicas de ataque e reconhecimento.
+
+Domine esses protocolos para mapear e explorar alvos com eficiência.
+
+---
+
+## 🧠 O que são TCP, UDP e ICMP?
+
+- **TCP (Transmission Control Protocol):** protocolo orientado à conexão, confiável e que garante entrega dos dados  
+- **UDP (User Datagram Protocol):** protocolo sem conexão, rápido e sem garantia de entrega, usado para transmissões rápidas  
+- **ICMP (Internet Control Message Protocol):** protocolo para troca de mensagens de controle e diagnóstico na rede  
+
+---
+
+## 🧱 Características principais
+
+### TCP
+
+- Estabelece conexão via handshake de 3 vias (SYN, SYN-ACK, ACK)  
+- Controle de fluxo e retransmissão de pacotes perdidos  
+- Usado por protocolos como HTTP, FTP, SMTP  
+- Ataques comuns: TCP SYN Flood (DoS), hijacking de sessão  
+
+### UDP
+
+- Comunicação sem conexão e sem confirmação de entrega  
+- Usado para DNS, VoIP, streaming  
+- Menor overhead, mas maior chance de perda de pacotes  
+- Ataques comuns: UDP Flood, reflexão/amplificação  
+
+### ICMP
+
+- Utilizado para mensagens de erro e teste (ping, traceroute)  
+- Fundamental para diagnóstico e manutenção da rede  
+- Ataques comuns: ICMP Flood (ping flood), ICMP redirect  
+
+---
+
+## 🔍 Exemplos práticos
+
+!!!
+- TCP: usar nmap para detectar portas TCP abertas no alvo  
+- UDP: realizar scan UDP para identificar serviços em execução  
+- ICMP: ping para verificar se o host está ativo e responder a testes  
+!!!
+
+---
+
+## ⚙️ Aplicação no Red Team
+
+- Use TCP para exploração de serviços com conexão garantida  
+- Explore UDP para identificar serviços rápidos e menos protegidos  
+- Utilize ICMP para mapeamento inicial e evasão de firewall  
+- Combine varreduras com análise dos protocolos para planejar ataques precisos  
+
+---
+
+## ✅ Conclusão
+
+Compreender os protocolos TCP, UDP e ICMP é fundamental para um Red Team N1 planejar e executar ataques efetivos. O domínio desses protocolos ajuda a identificar superfícies de ataque e a evitar detecção durante operações ofensivas.
+
+---
+
