--- a/_posts/2025-06-26-BlueTeamN2.md
+++ b/_posts/2025-06-26-BlueTeamN2.md
@@ -710,7 +710,7 @@ Cada regra Sigma possui campos como:
 
 ## 🔍 Exemplo simplificado de Sigma Rule
 
-!!!yaml
+```yaml
 title: PowerShell Suspicious Command
 description: Detecta comandos PowerShell com parâmetros codificados
 logsource:
@@ -723,7 +723,7 @@ detection:
 level: high
 tags:
   - attack.execution
-!!!
+```
 
 ---
 
@@ -816,7 +816,7 @@ Transformar dados brutos em alertas precisos é o poder da detecção eficaz.
 
 ### Estrutura básica da regra
 
-!!!yaml
+```yaml
 title: Detecção de PowerShell com Comando Codificado
 id: 12345678-90ab-cdef-1234-567890abcdef
 description: Detecta execução de PowerShell usando o parâmetro -EncodedCommand
@@ -834,7 +834,7 @@ level: high
 tags:
   - attack.execution
   - attack.t1059
-!!!
+```
 
 ---
 
