--- a/_posts/2025-06-26-RedTeamN1.md
+++ b/_posts/2025-06-26-RedTeamN1.md
@@ -5,7 +5,7 @@ categories: [Red Team, Nivel 1]
 tags: [Teorica]
 description: "Profissional em fase inicial que apoia as atividades de simulação de ataques, realiza tarefas básicas de reconhecimento e testes preliminares de vulnerabilidades sob supervisão. Está focado em aprender técnicas de ofensiva, ferramentas e metodologias para entender o funcionamento dos sistemas alvo."
 image:
-  path: /assets/img/000/capa.webp
+  path: /assets/img/RedTeamN1.png
   alt: Ilustração de um computador moderno com elementos de código e processamento
 ---
 
