--- a/_posts/2025-06-26-RedTeamN2.md
+++ b/_posts/2025-06-26-RedTeamN2.md
@@ -5,7 +5,7 @@ categories: [Red Team, Nivel 2]
 tags: [Teorica]
 description: "Profissional com experiência prática que conduz simulações de ataques mais sofisticadas, explora vulnerabilidades, executa técnicas de invasão controlada e documenta os resultados. Atua com maior autonomia e contribui para o desenvolvimento de estratégias ofensivas alinhadas aos objetivos da organização."
 image:
-  path: /assets/img/000/capa.webp
+  path: /assets/img/RedTeamN2.png
   alt: Ilustração de um computador moderno com elementos de código e processamento
 ---
 
