--- a/_posts/2025-06-26-RedTeamN3.md
+++ b/_posts/2025-06-26-RedTeamN3.md
@@ -5,7 +5,7 @@ categories: [Red Team, Nivel 3]
 tags: [Teorica]
 description: "Especialista com profundo conhecimento em segurança ofensiva, responsável pela liderança de operações complexas de simulação de ataques, criação de cenários realistas e desenvolvimento de táticas avançadas. Coordena equipes, orienta os níveis júnior e pleno, e fornece recomendações estratégicas para fortalecer a defesa da organização."
 image:
-  path: /assets/img/000/capa.webp
+  path: /assets/img/RedTeamN3.png
   alt: Ilustração de um computador moderno com elementos de código e processamento
 ---
 
