--- a/_posts/2025-06-26-PROJsiem.md
+++ b/_posts/2025-06-26-PROJsiem.md
@@ -5,7 +5,7 @@ categories: [Blue Team, Nivel 1]
 tags: [Teorica]
 description: "Profissional em início de carreira, responsável por monitoramento básico, identificação preliminar de ameaças e suporte às operações de segurança. Atua seguindo procedimentos estabelecidos e orientações de profissionais mais experientes, desenvolvendo habilidades técnicas e conhecimento do ambiente de segurança."
 image:
-  path: /assets/img/BlueTeamN1.png
+  path: /assets/img/PROJsiem.png
   alt: Ilustração de um computador moderno com elementos de código e processamento
 ---
 
@@ -736,10 +736,12 @@ Esta seção será dividida de acordo com a arquitetura escolhida (ex: All-in-on
 
 ### Casos de Uso SIEM
 
-| Nome da regra                                   | Categoria base Mitre                               | Tecnologia aplicada                                   | Como testar                                                                                                                              |
-| :---------------------------------------------- | :------------------------------------------------- | :------------------------------------------------------ | :--------------------------------------------------------------------------------------------------------------------------------------- |
-| Tentativas Múltiplas de Login Falhas (Brute Force) | Initial Access (T1078) / Credential Access (T1110) | Logs de Autenticação (Active Directory, Linux Auth Logs, Aplicações Web, VPN) | Tentar múltiplos logins inválidos em uma conta por ferramentas como Hydra ou scripts (em ambiente controlado).                           |
-| Login de Localização Geográfica Incomum         | Initial Access (T1078) / Defense Evasion (T1564)   | Logs de Login (VPN, Cloud Services - O365, Azure AD, GSuite) | Usar uma VPN para simular login de um país diferente do usual para um serviço de nuvem.                                                   |
-| Grande Volume de Dados Transferidos (Exfiltração) | Exfiltration (T1041, T1048, T1537)                 | Logs de Proxy/Firewall (Web Proxy, Firewall, DLP), Logs de Cloud Storage (S3, Azure Blob) | Transferir um arquivo grande para um serviço de armazenamento em nuvem não autorizado ou para um IP externo.                              |
-| Criação/Modificação de Conta Privilegiada Suspeita | Privilege Escalation (T1078, T1098, T1136)          | Logs de Auditoria de SO (Windows Event Logs - Security, Linux Auditd), Logs de Active Directory/LDAP | Tentar adicionar uma conta a um grupo de administradores ou modificar permissões de um arquivo crítico (em ambiente de teste).           |
-| Conexão Suspeita para IP Malicioso Conhecido    | Command and Control (T1071, T1573) / Execution (T1204) | Logs de DNS, Logs de Firewall/Proxy, Threat Intelligence Feeds | Tentar acessar um domínio conhecido por ser malicioso (de uma lista de TI) em um ambiente controlado, ou simular uma conexão C2 simples. |
+| Controle/Área ISO 27002                 | Risco Abordado                                          | Caso de Uso SIEM (Monitoramento/Observabilidade)                                 | Tecnologias/Dados Monitorados pelo SIEM                                        |
+| :-------------------------------------- | :------------------------------------------------------ | :------------------------------------------------------------------------------- | :----------------------------------------------------------------------------- |
+| **A.12.4.1 - Registro de eventos** | Falha na detecção de atividades não autorizadas ou maliciosas; Não conformidade com auditorias. | **Detecção e Análise de Logs de Segurança** | Logs de Firewall, IDS/IPS, Proxy, Antivírus, Servidores (SO, Web, Banco de Dados), Aplicações, Dispositivos de Rede. |
+| **A.12.6.1 - Gestão de vulnerabilidades técnicas** | Exploração de vulnerabilidades conhecidas por atacantes; Comprometimento de sistemas. | **Monitoramento de Tentativas de Exploração e Varreduras** | Logs de IDS/IPS, Scanners de Vulnerabilidade, Logs de Firewall (tráfego bloqueado para portas/serviços vulneráveis), WAF. |
+| **A.9.2.5 - Revisão dos direitos de acesso do usuário** | Acúmulo de privilégios; Acesso indevido a sistemas ou dados por usuários não autorizados. | **Monitoramento de Alterações de Privilégios e Criação de Contas Suspeitas** | Logs de Active Directory/LDAP, Logs de Auditoria de Sistema Operacional (Windows Event Logs - Security, Linux Auditd), Logs de SaaS/Cloud IAM. |
+| **A.13.1.2 - Segurança dos serviços de rede** | Acesso não autorizado a serviços de rede; Uso indevido de recursos de rede; Ataques DDoS. | **Detecção de Anomalias de Tráfego de Rede e Acessos Incomuns** | Logs de Firewall, Routers, Switches, NetFlow/IPFIX, Logs de VPN, DNS.           |
+| **A.16.1.4 - Monitoramento de incidentes de segurança da informação** | Não detecção ou atraso na detecção de incidentes de segurança; Resposta ineficaz a incidentes. | **Correlação de Eventos e Geração de Alertas em Tempo Real** | Agrega todos os logs mencionados acima para correlação, feeds de Threat Intelligence, Alertas de segurança de nuvem. |
+| **A.15.1.1 - Política de segurança da informação para relações com fornecedores** | Acesso não autorizado ou uso indevido de dados/sistemas por terceiros. | **Monitoramento de Acessos de Terceiros e Comportamento Anormal** | Logs de VPNs de parceiros, Logs de autenticação de provedores de serviços, Logs de acesso a dados compartilhados com fornecedores. |
+| **A.14.2.1 - Política de desenvolvimento seguro** | Vulnerabilidades em aplicações desenvolvidas internamente ou adquiridas. | **Monitoramento de Eventos de Segurança de Aplicações** | Logs de WAF (Web Application Firewall), Logs de Auditoria de Aplicação, Logs de autenticação de aplicações customizadas. |
